@@ -1,0 +1,3 @@
+def test_spam():
+    assert True
+
