@@ -1,5 +1,6 @@
 [nosetests]
 with-doctest=1
+doctest-extension=.rst
 
 [bdist_rpm]
 doc_files = man/man1/nosetests.1
